--- a/lib/src/hero/hero_component.html
+++ b/lib/src/hero/hero_component.html
@@ -1,4 +1,5 @@
 <div *ngIf="hero != null">
+  <div id="content">
   <h2>{{hero.name}}</h2>
   <p>对于二次函数来说，其表示方法一般有三种，即数表法、图像法、关系式法，这三种表示方法彼此之间不但有联系，而且在某些情况下还可以互相转化.</p>
   
@@ -59,4 +60,7 @@
     </ul>
   </div>
   <button (click)="goBack()">Back</button>
+  </div>
 </div>
+
+
