--- a/lib/src/hero/hero_list_component.html
+++ b/lib/src/hero/hero_list_component.html
@@ -1,3 +1,4 @@
+<div id="content">
 <h2>二次函数</h2>
 <ul class="items">
   <li *ngFor="let hero of heroes"
@@ -6,3 +7,4 @@
     <span class="badge">{{hero.id}}</span> {{hero.name}}
   </li>
 </ul>
+</div>
