--- a/lib/src/login/login_component.html
+++ b/lib/src/login/login_component.html
@@ -5,13 +5,13 @@
 <div id="content">
     <form>
         <div class="login-input-box">
-            <material-input label="Your Username"
+            <material-input label="用户名"
                             class="login-input-box"
                             [(ngModel)]="username">
             </material-input>
         </div>
         <div class="login-input-box">
-            <material-input label="Your Password"
+            <material-input label="密码"
                             class="login-input-box"
                             type="password"
                             [(ngModel)]="password">
@@ -21,7 +21,7 @@
             <material-button raised class="blue" (click)="gotoPrint()">登录</material-button>
         </div>
         <div style="margin-top: -5px">
-            <material-button flat class="grey" (click)="gotoRegister()">去注册</material-button>
+            <material-button flat class="grey" (click)="gotoRegister()">注册</material-button>
         </div>
     </form>
 </div>
