--- a/web/index.html
+++ b/web/index.html
@@ -1,14 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-      <script>
-          // WARNING: DO NOT set the <base href> like this in production!
-          // Details: https://webdev.dartlang.org/angular/guide/router
-          (function () {
-            var m = document.location.pathname.match(/^(\/[-\w]+)+\/web($|\/)/);
-            document.write('<base href="' + (m ? m[0] : '/') + '" />');
-          }());
-          </script>
+    <link rel="stylesheet"
+    href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css"
+    integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M"
+    crossorigin="anonymous">
+    
       <script>
         // WARNING: DO NOT set the <base href> like this in production!
         // Details: https://webdev.dartlang.org/angular/guide/router
@@ -145,11 +142,11 @@
         </tr>
         <tr>
           <td>maxY:</td>
-          <td><input type="text" id="maxY" value="200"/></td>
+          <td><input type="text" id="maxY" value="10"/></td>
         </tr>
         <tr>
           <td>halfstep:</td>
-          <td><input type="text" id="halfStep" value="20"/></td>
+          <td><input type="text" id="halfStep" value="200"/></td>
         </tr>
         <tr>
           <td colspan="1"><button name="btnDraw" type="button" onClick="draw()">Draw</button></td>
