--- a/lib/src/register/register_component.html
+++ b/lib/src/register/register_component.html
@@ -63,7 +63,7 @@
     </table>
 
     <button (click)="submitted=false" class="btn btn-primary">Edit</button>
-    <button (click)="sureRegister ()" type="sure"  class="btn btn-primary">sure</button>
+    <button (click)="sureRegister ()" class="btn btn-primary">sure</button>
    
 
   </div>
