--- a/web/index.html
+++ b/web/index.html
@@ -142,6 +142,7 @@
         </tr>
         <tr>
           <td>maxY:</td>
+          <td><input type="text" id="maxY" value="10"/></td>
         </tr>
         <tr>
           <td>halfstep:</td>
